src/sass/wp-help.sass
$system-fonts: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif
$label-color: #23282d
$screen-small-min: 783px

%system-fonts
	font-family: $system-fonts

@mixin small-and-up
	@media (min-width: #{$screen-small-min})
		@content

#cws-wp-help-actions
	padding-bottom: 5px
	a
		text-decoration: none
		float: right
		font-size: 13px
		max-height: 16px
		font-weight: normal
		padding: 4px 8px
		margin-left: 5px
		right: -5px
		top: -5px
		position: relative
		border: 1px solid #ccc
		background: #f7f7f7
		font-weight: bold
		border-radius: 2px
		body.rtl &
			float: left
			margin-left: 0
			margin-right: 5px
			right: auto
			left: -5px
		&#cws-wp-help-settings-on
			float: left
			left: -5px
			margin-left: 0
			body.rtl &
				float: right
				left: auto
				right: -5px
				margin-right: 0
		&:hover
			border-color: #008EC2
			background: #00a0d2
			color: #fff

#cws-wp-help-listing
	width: 250px
	float: left
	clear: both
	margin: 10px 10px 10px 0
	padding: 10px
	border: 1px solid #ccc
	background: #fafafa
	border-radius: 3px

	+small-and-up
		min-height: 400px

	body.rtl &
		float: right
		margin: 10px 0 10px 10px
	ul li a
		text-decoration: none
	h3
		line-height: 21px
		margin: 0
		padding: 3px 5px
		position: relative
		left: -6px
	ul
		margin: 5px 5px 5px 15px
		list-style: circle
		body.rtl &
			margin: 5px 15px 5px 5px
		ul
			list-style: square
	> ul
		margin: 10px 5px 10px 20px
		body.rtl &
			margin: 10px 20px 10px 5px

#cws-wp-help-document,
#cws-wp-help-settings
	clear: both
	max-width: 600px
	padding-left: 0
	padding-right: 0

	+small-and-up
		padding-left: 300px
		clear: none
		body.rtl &
			padding-left: 0
			padding-right: 300px

	ul
		padding-left: 25px
		list-style: square
		body.rtl &
			padding-left: 0
			padding-right: 25px

#cws-wp-help-document
	h2 small
		@extend %system-fonts
		font-size: 12px
		color: #888
		text-shadow: 0 1px 0 white
		a
			text-decoration: none

#cws-wp-help-settings
	li
		font-style: italic

#cws-wp-help-settings,
#cws-wp-help-listing-labels,
#cws-wp-help-h2-label-wrap
	display: none

#cws-wp-help-settings-cancel
	margin-left: 10px
	body.rtl &
		margin-left: 0
		margin-right: 10px

#cws-wp-help-listing-labels
	position: relative
	left: -6px
	line-height: 19px
	padding: 1px 0
	body.rtl &
		left: auto
		right: -6px

input#cws-wp-help-listing-label
	@extend %system-fonts
	line-height: 19px
	background: blue
	font-weight: 600
	font-size: 1.3em
	margin: 0
	color: $label-color
	outline: 1px dashed #dfdfdf
	padding: 3px 5px
	border: none
	width: 258px
	background: #ffffee

#cws-wp-help-h2-label-wrap
	position: relative
	left: -5px
	padding: 6px 0 1px
	body.rtl &
		left: auto
		right: -5px

input#cws-wp-help-h2-label
	@extend %system-fonts
	line-height: 29px
	font-size: 23px
	font-weight: 400
	color: $label-color
	outline: 1px dashed #dfdfdf
	margin: 0
	padding: 3px 5px
	border: none
	width: 450px
	background: #ffffee

input#cws-wp-help-api-url,
input#cws-wp-help-slurp-url
	width: 100%

#cws-wp-help-slurp-error
	display: none
	margin: 5px 0 15px
	background: #FFEBE8
	border: 1px solid #CC0000
	padding: 0 0.6em
	border-radius: 3px

#icon-wp-help
	background: transparent image-url('../images/icon-32.png') no-repeat

.cws-wp-help-placeholder
	background: #dadada
	height: 40px
	padding-left: 17px
	left: -17px
	position: relative
	list-style: none
	border: 1px dashed #bbb
	border-radius: 3px
	body.rtl &
		left: auto
		right: -17px
		padding-left: 0
		padding-right: 17px

#cws-wp-help-listing-wrap ul
	> li > img.sort-handle,
	> div#cws-wp-help-remote-docs-block > li > img.sort-handle,
	&.ui-sortable > li.cws-wp-help-is-slurped > img.sort-handle
		display: none
	&.ui-sortable
		li
			position: relative
		> li.cws-wp-help-local > img.sort-handle,
		> div#cws-wp-help-remote-docs-block > li:first-child > img.sort-handle
			display: inline
			position: absolute
			left: -17px
			vertical-align: middle
			body.rtl &
				left: auto
				right: -17px
		> li.cws-wp-help-local,
		> div#cws-wp-help-remote-docs-block > li:first-child
			list-style: none
	&.can-sort .sort-handle:hover
		cursor: move

#cws-wp-help-loading
	position: absolute
	right: 0
	top: 0
	body.rtl &
		right: auto
		left: 0

// Documentation Typography Styles.
// Heavily inspired by Gutenberg styling.
.toplevel_page_wp-help-documents
	background-color: #fff

#cws-wp-help-document
	max-width: 680px
	font-size: 18px
	line-height: 1.65
	color: #191e23

	h1,h2,h3,h4,h5,h6
		line-height: 1.4
		font-weight: 700

	h1
		font-size: 2em

	> h1:first-child > small // the edit link
		font-size: 16px

	h2
		font-size: 1.5em
		margin-bottom: .5em

	h3
		font-size: 1.25em
		margin-bottom: .5em

	h4
		font-size: 1.125em
		line-height: 1.5
		margin-bottom: .5em

	p, blockquote, ul, ol, pre
		margin-top: 1.5em
		margin-bottom: 1.5em

	p
		margin: 1.5em 0
		font-size: inherit
		line-height: inherit

	blockquote
		padding: 1.1em
		margin-left: 0
		margin-right: 0
		background: #eee
		background: rgba(0,0,0,.077)
		line-height: 1.5

		> :first-child
			margin-top: 0

		> :last-child
			margin-bottom: 0

	hr
		margin: 2.5em 5em
		border-top-color: #bbb

	code,kbd
		background-color: rgba(0,0,0,.1)
		font-size: 1em

	pre
		line-height: 1.45

	img, .wp-caption
		max-width: 100%
		height: auto

	.alignleft
		margin-right: 1.5em

	.alignright
		margin-left: 1.5em

	.wp-caption-text
		margin-top: 0
		margin-bottom: 1em
		font-size: .8333em
		font-style: italic

	table
		border-collapse: collapse
		font-size: .8333em

		td,th
			padding: .75em
			border: 1px solid #ddd

		th
			text-align: left
			background-color: #ddd

